--- a/app/views/games/copy_move.js.erb
+++ b/app/views/games/copy_move.js.erb
@@ -65,6 +65,8 @@ if (success) {
 
     <% end %>
 
+    data['scroll'] = $(document).scrollTop().valueOf();
+
     $.ajax({
         url: '/collections/<%= @current.id %>',
         data: data
