--- a/app/views/collections/remove_game.js.erb
+++ b/app/views/collections/remove_game.js.erb
@@ -1,4 +1,5 @@
 var msg_pos = 'top-right'
+var success = <%= @success %>;
 
 UIkit.notification({
     message: $('<div/>').html('<%= @message %>').text(),
@@ -7,8 +8,11 @@ UIkit.notification({
     timeout: 5000
 });
 
-<% if @success %>
-var data = { type: 'refresh', view: '<%= @view %>' };
+if (success) {
+    var data = {
+        type: 'refresh',
+        view: '<%= @view %>'
+    };
 
     if ($('#r-q').text().length != 0 && $('#r-s').text().length != 0) {
         search = $('#r-q').text().split(',');
@@ -31,18 +35,19 @@ var data = { type: 'refresh', view: '<%= @view %>' };
         };
     }
 
-if ($('.pr em.current').length != 0) {
-    var current_page = $('.pr em.current').text();
-    var num_of_games = $('.g-panel').length;
-    if (num_of_games == 1) {
-        current_page -= 1;
+    if ($('.pr em.current').length != 0) {
+        var current_page = $('.pr em.current').text();
+        var num_of_games = $('.g-panel').length;
+        if (num_of_games == 1) {
+            current_page -= 1;
+        }
+        data['page'] = current_page;
     }
-    data['page'] = current_page;
+
+    data['scroll'] = $(document).scrollTop().valueOf();
+
+    $.ajax({
+        url: '/collections/<%= @collection.id %>',
+        data: data
+    });
 }
-
-$.ajax({
-    url: '/collections/<%= @collection.id %>',
-    data: data
-});
-
-<% end %>
