Remove previous rescroll. Add better rescroll to edit and remove action in my games.

--- a/app/views/collections/remove_game.js.erb
+++ b/app/views/collections/remove_game.js.erb
@@ -44,10 +44,15 @@ if (success) {
         data['page'] = current_page;
     }
 
-    data['scroll'] = $(document).scrollTop().valueOf();
+    var scroll = $(document).scrollTop().valueOf();
 
     $.ajax({
         url: '/collections/<%= @collection.id %>',
-        data: data
+        data: data,
+
+        complete: function(data) {
+            $(document).scrollTop(scroll);
+        }
+
     });
 }
