--- a/app/views/collections/_show.js.erb
+++ b/app/views/collections/_show.js.erb
@@ -3,7 +3,7 @@ $("#mc-<%= @collection.id %>").addClass('active');
 var view = '<%= @view %>';
 var refresh = <%= @refresh %>;
 
-var scroll = '<%= @scroll %>';
+// var scroll = '<%= @scroll %>';
 
 if (refresh && view === 'panels') {
   var ids = getIdsOfOpenPanels();
@@ -12,12 +12,6 @@ if (refresh && view === 'panels') {
 cleanOffcanvas();
 
 $("#big-c").html("<%= j(render partial: 'my_games', locals: { collection: @collection, view: @view }) %>");
-
-if (scroll) {
-    $(function() {
-        $(document).scrollTop(scroll);
-    });
-}
 
 if (refresh && view === 'panels') {
   openPanels(ids);
