--- a/app/views/cover_view/_cover_view.html.erb
+++ b/app/views/cover_view/_cover_view.html.erb
@@ -76,7 +76,7 @@
         <% end %>
         <% end %>
       </div>
-      <%= content_tag(:div, 'Loading...', id: "add-form-#{ x_id }", class: 'add-form', 'uk-dropdown': "toggle: #add-#{ x_id }; mode: click; boundary: #gs-#{ x_id }; boundary-align: true;  delay-hide: 100;  pos: right-top") %>
+      <%= content_tag(:div, 'Loading...', id: "add-form-#{ x_id }", class: 'add-form white-form', 'uk-dropdown': "toggle: #add-#{ x_id }; mode: click; boundary: #gs-#{ x_id }; boundary-align: true;  delay-hide: 100;  pos: right-top") %>
       <% end %>
       <% end %>
 </div>
