--- a/app/assets/stylesheets/panels.scss
+++ b/app/assets/stylesheets/panels.scss
@@ -522,8 +522,8 @@ hr.md {
     margin-bottom: 0px;
 
     .gw-b {
+        font-size: 14px;
         color: #777777;
-        border-color: $light_grey;
     }
 }
 
