--- a/app/assets/stylesheets/covers.scss
+++ b/app/assets/stylesheets/covers.scss
@@ -113,10 +113,11 @@
 
     button {
         background: none;
-        border: 2px solid #bababa;
+        border: 1px solid #929292;
         border-radius: 3px;
-        color: #969696;
+        color: #666666;
         font-size: 13px;
+        font-weight: 300;
         transition: color 0.2s ease-in-out, border 0.2s ease-in-out;
 
         &:focus {
