--- a/app/views/my_games/_panels.html.erb
+++ b/app/views/my_games/_panels.html.erb
@@ -23,10 +23,10 @@
             <div class="hold-title uk-width-expand">
                 <h4 class="g-title"><%= game.name %>
                 <% if (status_id = game[:status]) && status_id != 0 %>
-                <button class='gw-b'><%= convert_status(status_id) %></button>
+                <span class='gw-b'>/ <%= convert_status(status_id) %></span>
                 <% end %>
                 <% if (category_id = game[:category]) && category_id != 0 %>
-                <button class='gw-b'><%= convert_category(category_id) %></button>
+                <span class='gw-b'>/ <%= convert_category(category_id) %></span>
                 <% end %>
                 <%= content_tag(:span, "(#{ Time.at(game.first_release_date).year })", class: 'g-year') if game.first_release_date %>
                 </h4>
