Change sort link name 'Date Added' to 'Added'  for better visual alignment. Undo changes to page-links.

--- a/app/assets/stylesheets/list.scss
+++ b/app/assets/stylesheets/list.scss
@@ -163,7 +163,7 @@ a.t-trigger {
     padding-right: 10px;
     border-radius: 0px 3px 3px 0px;
     text-align: right;
-    transition: right 0.3s ease-in-out;
+    transition: right 0.3s linear;
 }
 
 .t-menu.out {
@@ -179,7 +179,7 @@ div.menu-shadow {
     right: 0;
     z-index: -1;
     box-shadow: -6px 4px 3px -2px rgba(0, 0, 0, 0.11);
-    transition: width 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    transition: width 0.3s linear, box-shadow 0.3s linear;
 }
 
 .menu-shadow.out {
@@ -193,7 +193,7 @@ div.menu-shadow {
     border-radius: 0px 3px 3px 0px;
     font-size: 13px;
     text-align: right;
-    transition: border-radius 0.3s;
+    transition: border-radius 0.3s linear;
 }
 
 .t-added.out {
