--- a/app/views/my_games/_covers.html.erb
+++ b/app/views/my_games/_covers.html.erb
@@ -4,7 +4,7 @@
   <div class="srch-div"></div>
   <%= sort_link(@q, :first_release_date,'Release Date', {}, {remote: true}) %>
   <div class="srch-div"></div>
-  <%= sort_link(@q, :added,'Date Added', {}, {remote: true}) %>
+  <%= sort_link(@q, :added,'Added', {}, {remote: true}) %>
 </div>
 <div class="uk-grid uk-text-center uk-flex uk-flex-center covers-grid">
   <div class="uk-width-1-1 page-links pr cover-mod cover-mod-top">
