--- a/app/views/my_games/_list.html.erb
+++ b/app/views/my_games/_list.html.erb
@@ -4,7 +4,7 @@
     <div class="srch-div"></div>
     <%= sort_link(@q, :first_release_date,'Release Date', {}, {remote: true}) %>
     <div class="srch-div"></div>
-    <%= sort_link(@q, :added,'Date Added', {}, {remote: true}) %>
+    <%= sort_link(@q, :added,'Added', {}, {remote: true}) %>
 </div>
 <div class="uk-grid-collapse list-grid" uk-grid>
     <div class="uk-width-1-1 page-info-front">
