--- a/app/views/my_games/_list.html.erb
+++ b/app/views/my_games/_list.html.erb
@@ -7,10 +7,8 @@
     <%= sort_link(@q, :added,'Added', {}, {remote: true}) %>
 </div>
 <div class="uk-grid-collapse list-grid" uk-grid>
-    <div class="uk-width-1-1 page-info-front">
-        <div class="page-links pr">
-            <%= js_will_paginate @games, container: false %>
-        </div>
+    <div class="uk-width-1-1 page-info-front page-links pr">
+        <%= js_will_paginate @games, container: false %>
     </div>
     <% @games.select('games.*, collection_games.created_at').each do |game| %>
     <% id = game.id %>
@@ -18,8 +16,8 @@
     <% mw_class = needs_platform ? '' : ' no-plat' %>
     <% extra = 'out' if edit_open? %>
     <div class="t-game uk-width-1-1 uk-grid-collapse" uk-grid>
-         <%= link_to('', table_show_url(game.id), class: 't-trigger',
-          remote: true, 'uk-toggle': 'target: .t-game-show') %>
+        <%= link_to('', table_show_url(game.id), class: 't-trigger',
+        remote: true, 'uk-toggle': 'target: .t-game-show') %>
         <%= content_tag :div, class: 't-name t' + mw_class do %>
         <%= game.name %>
         <% if (status_id = game[:status]) && status_id != 0 %>
@@ -39,18 +37,18 @@
         <% end %>
         <%= content_tag :div, game.created_at.to_date, class: "t-added t #{ extra }" + mw_class %>
         <%= content_tag :div, class: "t-menu t #{ extra }" do %>
-            <% if needs_platform %>
-            <%= link_to('', edit_form_url(game_id: id, collection_id: collection.id, view: @view), id: "g-edit-#{ id }", class: 'uk-icon-link', remote: true, 'uk-icon': 'pencil', 'uk-toggle': 'target: #t-ops', 'uk-tooltip' => "title: Edit; pos: top") %>
-            <% else %>
-            <%= content_tag(:a, '', class: 'uk-icon-link cf-disabled', 'uk-icon': 'pencil') %>
-            <% end %>
-            <%= link_to('', cm_form_url(game_id: id, collection_id: collection.id, view: @view), id: "g-copy-#{ id }", class: 'uk-icon-link', remote: true, 'uk-icon': 'copy', 'uk-toggle': 'target: #t-ops', 'uk-tooltip' => "title: Copy / Move; pos: top") %>
-            <%= link_to('', remove_url(game_id: id, collection_id: collection.id, view: @view), id: "g-delete-#{ id }", class: 'uk-icon-link', method: :delete, remote: true, 'uk-icon': 'trash', 'uk-tooltip': 'title: Delete; pos: top') %>
-            <%= content_tag :div,nil, class: "menu-shadow #{ extra }" %>
+        <% if needs_platform %>
+        <%= link_to('', edit_form_url(game_id: id, collection_id: collection.id, view: @view), id: "g-edit-#{ id }", class: 'uk-icon-link', remote: true, 'uk-icon': 'pencil', 'uk-toggle': 'target: #t-ops', 'uk-tooltip' => "title: Edit; pos: top") %>
+        <% else %>
+        <%= content_tag(:a, '', class: 'uk-icon-link cf-disabled', 'uk-icon': 'pencil') %>
+        <% end %>
+        <%= link_to('', cm_form_url(game_id: id, collection_id: collection.id, view: @view), id: "g-copy-#{ id }", class: 'uk-icon-link', remote: true, 'uk-icon': 'copy', 'uk-toggle': 'target: #t-ops', 'uk-tooltip' => "title: Copy / Move; pos: top") %>
+        <%= link_to('', remove_url(game_id: id, collection_id: collection.id, view: @view), id: "g-delete-#{ id }", class: 'uk-icon-link', method: :delete, remote: true, 'uk-icon': 'trash', 'uk-tooltip': 'title: Delete; pos: top') %>
+        <%= content_tag :div,nil, class: "menu-shadow #{ extra }" %>
         <% end %>
     </div>
     <% end %>
-    <div class="uk-width-1-1 page-links bottom">
+    <div class="uk-width-1-1 page-links bottom l-mod">
         <%= js_will_paginate @games, container: false %>
     </div>
 </div>
@@ -64,10 +62,8 @@
 </div>
 <div id="t-ops" uk-modal ="container: .my-games">
     <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical">
-        <!-- <button class="uk-modal-close-default" type="button" uk-close></button> -->
         <div class="modal-content">
             Loading...
         </div>
     </div>
 </div>
-
