Add hover like fill to list element that is currently connected with modal (actions or game show).

--- a/app/assets/stylesheets/list.scss
+++ b/app/assets/stylesheets/list.scss
@@ -108,7 +108,6 @@
     }
 }
 
-
 #t-ops {
     .uk-modal-body {
         background: #ececec;
@@ -235,7 +234,7 @@ div.t-name {
     z-index: 2;
 }
 
-.t-game-show {
+#t-game-show {
     .uk-modal-body {
         border-radius: 5px;
         width: 900px;
