--- a/app/views/games/edit_form.js.erb
+++ b/app/views/games/edit_form.js.erb
@@ -4,6 +4,7 @@ var form;
 if (view === 'list') {
   $("#t-ops .modal-content").html("<%= j(render partial: 'my_games/edit_form', locals: { game: @game, collection: @collection, view: @view }) %>");
   form = 'list'
+  listLight('<%= @game.id %>', 't-ops');
 } else {
   $("#edit-form-<%= @game.id %>").html("<%= j(render partial: 'my_games/edit_form', locals: { game: @game, collection: @collection, view: @view }) %>");
   form = 'edit'
