--- a/app/views/games/table_show.js.erb
+++ b/app/views/games/table_show.js.erb
@@ -1,2 +1,3 @@
-$(".t-game-show .modal-content").html("<%= j(render partial: 'my_games/table_show', locals: { game: @game }) %>");
+$("#t-game-show .modal-content").html("<%= j(render partial: 'my_games/table_show', locals: { game: @game }) %>");
+listLight('<%= @game.id %>', 't-game-show');
 presentShadow();
