--- a/app/views/games/cm_form.js.erb
+++ b/app/views/games/cm_form.js.erb
@@ -6,6 +6,7 @@ var form_type;
 if (view === 'list') {
     $("#t-ops .modal-content").html("<%= j(render partial: 'my_games/copy_form', locals: { game: @game, collection: @collection, view: @view }) %>");
     form_type = 'list';
+    listLight('<%= @game.id %>', 't-ops');
 } else {
     $("#copy-form-<%= @game.id %>").html("<%= j(render partial: 'my_games/copy_form', locals: { game: @game, collection: @collection, view: @view }) %>");
     form_type = 'copy'
