--- a/app/assets/stylesheets/list.scss
+++ b/app/assets/stylesheets/list.scss
@@ -154,7 +154,7 @@ a.t-trigger {
 
 }
 
-.t-game.hover-fill div.t {
+.t-game.hover-fill div.t, .t-game.focus-fill div.t {
     background-color: #c5c5c5;
 }
 
