--- a/app/views/search/_add_form.html.erb
+++ b/app/views/search/_add_form.html.erb
@@ -56,7 +56,7 @@
     <button name="button" type="submit" class="cf-add-button">Add</button><span class="add-form-errors"></span>
     <% end %>
     <div class="already-in">
-        <%= render(partial: 'cover_view/already_in', locals: { igdb_id: data[:igdb_id], x_id: x_id }) if owned %>
+        <%= render(partial: 'search/already_in', locals: { igdb_id: data[:igdb_id], x_id: x_id }) if owned %>
     </div>
 <% else %>
     <span class="italic blink_me"><%= svg 'warning' %> Please add collection first</span>
