Build list view (in search igdb) as a whole new view with table.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,6 +46,7 @@ $disabled: #b4b4b4;
 @import "covers";
 @import "panels";
 @import "list";
+@import "s_list";
 @import "collections";
 @import "game_offc";
 
