--- a/app/assets/stylesheets/s_list.scss
+++ b/app/assets/stylesheets/s_list.scss
@@ -12,14 +12,13 @@
 }
 
 .s-platform {
-    width: 25%;
     font-size: 13px;
     text-align: justify;
 }
 
 .s-add {
-    width: 5%;
-    min-width: 20px;
+    width: 30px;
+    min-width: 30px;
 }
 
 .s-table {
@@ -31,6 +30,7 @@
     tr {
         box-shadow: -3px 4px 3px -2px rgba(0, 0, 0, 0.11);
         border-radius: 3px;
+
 
         th {
             padding: 0px;
@@ -52,6 +52,7 @@
     }
 
     td {
+        position: relative;
         background: #d2d2d2;
         padding: 10px 5px 10px 0px;
     }
@@ -76,4 +77,12 @@
     a:hover {
         color: $dark_grey;
     }
+}
+
+.s-trigger {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
 }
